# AlergieAI

./: .gitignore  README.md  Report-1211.md  app.py  chat_template.jinja  frontend.html  main.py  pyproject.toml  run_inference.py  setup_frpc.sh  start_frpc.sh  start_vllm.sh  test_gpu.py
.streamlit/: config.toml
allergy-ai/: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  cypress.config.ts  docker-compose.yml  env.txt  jest.config.js  jest.setup.js  next.config.js  package-lock.json  package.json  tailwind.config.ts
allergy-ai/cypress/: tsconfig.json
allergy-ai/cypress/e2e/: chat.cy.ts
allergy-ai/cypress/support/: commands.ts  e2e.ts
allergy-ai/src/: middleware.ts
allergy-ai/src/__tests__/: chat.test.tsx
allergy-ai/src/app/: globals.css  layout.tsx  page.tsx
allergy-ai/src/store/: chat-store.ts
frp/: frpc.toml
training/: README.md  generate_dataset.sh  generate_dataset_gemini.py  merge_lora.py  prepare_data.py  start_training.sh  train_qlora.py
training/data/: allergy_dataset_gemini.jsonl  example_allergy_qa.jsonl
wandb/: latest-run
wandb/run-20251129_110828-lkii0u4o/: run-lkii0u4o.wandb
wandb/run-20251129_110828-lkii0u4o/files/: config.yaml  wandb-metadata.json
wandb/run-20251129_111317-w9p46ayw/: run-w9p46ayw.wandb
wandb/run-20251129_111317-w9p46ayw/files/: config.yaml  wandb-metadata.json
wandb/run-20251129_111439-30v00qe8/: run-30v00qe8.wandb
wandb/run-20251129_111439-30v00qe8/files/: config.yaml  (+1 more)
wandb/run-20251129_111649-cegx3dpu/: run-cegx3dpu.wandb
wandb/run-20251129_112108-4vq64qgn/: run-4vq64qgn.wandb
(+25 files in other folders)
